--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Starter kit for Turing School's front-end module 1 Game Time project",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "build": "./node_modules/webpack/bin/webpack.js",
     "test": "./node_modules/mocha/bin/mocha --compilers js:babel-core/register",
     "eslint": "./node_modules/eslint/bin/eslint.js ./lib/*.js"
@@ -31,7 +31,10 @@
     "mocha-loader": "^1.0.0",
     "node-libs-browser": "^1.0.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.3",
+    "webpack": "^1.15.0",
     "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "webpack-windows": "0.0.3"
   }
 }
