--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.18.2",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^6.2.7",
     "babel-preset-env": "^1.6.1",
     "chai": "^3.5.0",
     "css-loader": "^0.26.0",
-    "eslint": "^4.9.0",
+    "eslint": "^4.16.0",
     "mocha": "^3.1.2",
     "mocha-loader": "^1.0.0",
     "node-libs-browser": "^1.0.0",
